WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186318
secheuristic should only use touch began and ended, not changed.
https://bugs.webkit.org/show_bug.cgi?id=186318
Summary
secheuristic should only use touch began and ended, not changed.
Jeremy Jones
Reported
2018-06-05 13:20:32 PDT
secheuristic should only use touch began and ended, not changed.
Attachments
Patch
(1.79 KB, patch)
2018-06-05 13:25 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2018-06-05 13:21:28 PDT
rdar://problem/39781486
Jeremy Jones
Comment 2
2018-06-05 13:25:01 PDT
Created
attachment 341988
[details]
Patch
WebKit Commit Bot
Comment 3
2018-06-05 14:29:10 PDT
Comment on
attachment 341988
[details]
Patch Clearing flags on attachment: 341988 Committed
r232521
: <
https://trac.webkit.org/changeset/232521
>
WebKit Commit Bot
Comment 4
2018-06-05 14:29:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug