secheuristic should only use touch began and ended, not changed. https://bugs.webkit.org/show_bug.cgi?id=186318 rdar://problem/39781486

Patch by Jeremy Jones <jeremyj@apple.com> on 2018-06-05
Reviewed by Jer Noble.

Filter out change events so swiping gestures don't trigger the heuristic.

* UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController _touchDetected:]):

Canonical link: https://commits.webkit.org/201702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232521 268f45cc-cd09-0410-ab3c-d52691b4dbfc