Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm
@@ -398,7 +398,7 @@ private:
 
 - (void)_touchDetected:(id)sender
 {
-    if ([_touchGestureRecognizer state] != UIGestureRecognizerStateBegan || [_touchGestureRecognizer state] == UIGestureRecognizerStateEnded) {
+    if ([_touchGestureRecognizer state] == UIGestureRecognizerStateBegan || [_touchGestureRecognizer state] == UIGestureRecognizerStateEnded) {
         double score = _secheuristic.scoreOfNextTouch([_touchGestureRecognizer locationInView:self.view]);
         if (score > requiredScore)
             [self _showPhishingAlert];
